# packet

./: CMakeLists.txt  README.md
GUI/: gui.cpp
include/back_up/: back_up.h
include/compression_method/: Huffman.h  huffman.h  lz77.h
include/encryption_method/: encryption.h
include/file_system/: get_entries.h
include/header/: file_header.h  header.h  local_file_header.h
include/local_packet/: local_packet.h
include/packet/: file_packet.h  packet.h
include/utils/: byte.h  byte_conversion.h  checksum.h  crc.h  crc_32.h
src/back_up/: back_up.cpp
src/compression_method/: Huffman.cpp  huffman.cpp  lz77.cpp
src/encryption_method/: encryption.cpp
src/file_system/: get_entries.cpp
src/header/: file_header.cpp  local_file_header.cpp
src/local_packet/: local_packet.cpp
src/packet/: file_packet.cpp  packet.cpp
src/utils/: byte_conversion.cpp  checksum.cpp  crc_32.cpp
test/: CMakeLists.txt  example.cpp  readme.md
test/src/: Huffman_compression.cpp  back_up_test.cpp  crc_32_test.cpp  encryption_test.cpp  example.cpp  file_header_test.cpp  get_entries_test.cpp  huffman_compression.cpp  local_file_header_test.cpp  lz77_test.cpp  pakcet_test.cpp  utils_test.cpp
test/static/: git_test.txt  test.txt
